dist/LineScript-win64-20260616/tests/cases/compile_fail/camera_bad_types.lsc
main() -> i64 do
  camera_bind("0")
  return 0
end
